# eightyeighty

./: .gitignore  Cargo.toml  README.md
docs/: opcodes.md
emulator/: Cargo.toml
emulator/src/: condition.rs  instruction.rs  lib.rs  parser.rs  register.rs
emulator/src/cpu/: cpu.rs  mod.rs
roms/: invaders.disassembled  invaders.hex
src/: disassembler.rs  logs.rs  main.rs
