[package]
name = "eightyeighty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disassembler"
path = "src/disassembler.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1.4", features = ["derive"] }

[dependencies.emulator]
path = "./emulator"
