[package]
name = "eightyeighty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disassembler"
path = "src/disassembler.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1.4", features = ["derive"] }

# Logging
log = "^0.4.17"
fern = { version = "^0.6.1", features = ["colored"] }
chrono = "^0.4.23"

[dependencies.emulator]
path = "./emulator"
